<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.anbo.checkbooktesting.SearchEntryActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_entry_activity_enter_cost_range_text"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:hint="@string/search_entry_activity_cost_low_bound_hint"/>
        <EditText
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:hint="@string/search_entry_activity_cost_high_bound_hint"/>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_entry_activity_enter_date_range_text"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_calendar_black"
                android:onClick="showDatePickerDialog"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/search_entry_activity_date_low_bound_text_view"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_calendar_black"
                android:onClick="showDatePickerDialog"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/search_entry_activity_date_high_bound_text_view"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_entry_activity_add_search_term_button_text"/>

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:id="@+id/search_entry_activity_tag_list_view"
        android:layout_weight="1">

    </ListView>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_entry_activity_search_button_text"/>

</LinearLayout>
